# openclas

./: CMakeLists.txt  ChangeLog.txt  DictionaryFormat.md  FAQ.md  LICENSE.txt  MAINTAINERS.txt  NEWS.txt  OpenClas_VS2008.sln  ProjectHome.md  Roadmap.md
OpenClas/: OpenClas_VS2005.vcproj  OpenClas_VS2008.vcproj  Segment.cpp  Segment.h  common.h  dictionary.cpp  dictionary.h  graph.h  ict_serializer.h  k_shortest_path.h  main.cpp  myKbest.h  serialization.cpp  serialization.h  serializer.h  tag.h  utility.cpp  utility.h  viterbi.h
cpp/: CMakeLists.txt
cpp/script/: bom.py  chd.cpp
cpp/src/: OpenClas_VS2005.vcproj  OpenClas_VS2008.vcproj  unit_test_segment.hpp
include/openclas/: common.h  k_shortest_path.h  utility.h  viterbi.h
src/: OpenClas_VS2005.vcproj  test.cpp
tags/VERSION_1_MILESTONE_1/: ChangeLog.txt
tags/VERSION_1_MILESTONE_1/cpp/src/unit_test/: CMakeLists.txt  OpenClas_VS2005.vcproj  OpenClas_VS2008.sln  OpenClas_VS2008.vcproj  unit_test_segment.hpp  unit_test_serialization.hpp  unit_test_viterbi.hpp
trunk/: AUTHORS.txt  ChangeLog.txt  LICENSE.txt  OpenClas.sln  OpenClas_VS2005.sln
trunk/OpenClas/: OpenClas_VS2005.vcproj  OpenClas_VS2008.vcproj  Segment.cpp  Segment.h  common.h  dictionary.cpp  dictionary.h  graph.h  ict_serializer.h  k_shortest_path.h  main.cpp  myKbest.h  openclas_serializer.h  serialization.cpp  serialization.h  serializer.h  tag.h  utility.cpp  utility.h  viterbi.h
trunk/cpp/: COPYING.txt
trunk/cpp/src/unit_test/: CMakeLists.txt  OpenClas_VS2005.vcproj  OpenClas_VS2008.vcproj  unit_test.cpp  unit_test_builder.hpp  unit_test_dictionary.hpp  unit_test_k_shortest_path.hpp  unit_test_longtime.hpp  unit_test_segment.hpp  unit_test_serialization.hpp  unit_test_utility.hpp
trunk/include/: Segment.cpp  Segment.h
trunk/src/: OpenClas_VS2005.vcproj  OpenClas_VS2008.vcproj  main.cpp
wiki/: DictionaryFormat.wiki  FAQ.wiki  Roadmap.wiki
(+53 files in other folders)
